# PurinBox

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyrightconfig.json
.github/workflows/: build-macos.yml  build-windows.yml  release.yml
runtime/python/lib/: libtcl9.0.dylib  libtcl9tk9.0.dylib
runtime/python/lib/itcl4.3.5/: itclConfig.sh  libitcl4.3.5.dylib  libtcl9itcl4.3.5.dylib
runtime/python/lib/thread3.0.4/: libtcl9thread3.0.4.dylib  libthread3.0.4.dylib
runtime/python_env/: pyvenv.cfg
scripts/: sync-version.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: convert_esrgan_onnx.py  cuda_dll_helper.py  image_cluster.py  person_crop.py  realesrgan_upscale.py  tagger_inference.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: alpha_convert.rs  api_config.rs  batch_rename.rs  blur_noise.rs  bucket_preview.rs  file_keeper.rs  format_convert.rs  image_cluster.rs  image_crop.rs  image_dedup.rs  image_flip.rs  image_scale.rs  mod.rs  person_crop.rs  perspective.rs  proxy_config.rs  python_env.rs  resolution_filter.rs  tag_db.rs  tag_manager.rs  tag_sort.rs  translator.rs  upscale.rs
src-tauri/src/commands/tagger/: download.rs  gpu_runtime.rs  inference.rs  llm_tagger.rs  mod.rs  models.rs  python_env.rs
src/components/: AiTaggerTab.tsx  CustomSelect.tsx  Header.tsx  JsonTagTab.tsx  LlmTaggerTab.tsx  Modal.tsx  NaturalLangTab.tsx  ProcessButton.tsx  ProgressLog.tsx  Sidebar.tsx  SystemMonitor.tsx  TagAutocomplete.tsx  TaskContext.tsx  ThemeProvider.tsx
src/hooks/: usePythonEnvEvents.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  ja.ts  zh-CN.ts
src/pages/: AlphaConvertPage.tsx  AugmentPage.tsx  BatchRenamePage.tsx  BlurNoisePage.tsx  BucketPreviewPage.tsx  ConvertPage.tsx  CropPage.tsx  DatasetBalancerPage.tsx  FileKeeperPage.tsx  FilterPage.tsx  FlipPage.tsx  FormatConvertPage.tsx  HomePage.tsx  ImageClusterPage.tsx  ImageDedupPage.tsx  LabelingPage.tsx  OrganizePage.tsx  PersonCropPage.tsx  PerspectivePage.tsx  ResizePage.tsx  ScalePage.tsx  SettingsPage.tsx  TagManagerPage.tsx  TagSortPage.tsx  TaggerPage.tsx  UpscalePage.tsx
src/styles/: custom-select.css  global.css  layout.css  progress.css  sidebar.css  variables.css
