[package]
name = "purinbox"
version = "0.3.4"
description = "PurinBox - AI训练数据处理工具箱"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "purinbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
walkdir = "2"
psd = "0.3"
tokio = { version = "1", features = ["rt", "sync", "fs", "io-util", "macros", "time"] }
rand = "0.9"

reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"] }
futures-util = "0.3"
csv = "1"

base64 = "0.22"
sysinfo = "0.35"
zip = "2"
urlencoding = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
md5 = "0.7"
sha2 = "0.10"
hex = "0.4"
tauri-plugin-clipboard-manager = "2.3.2"

# Dev 模式下优化图像处理库，避免逐像素操作极慢
[profile.dev.package.image]
opt-level = 3

[profile.dev.package.psd]
opt-level = 3

# Windows: 禁用 WebView2 默认右键菜单需要此依赖
[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
